--- a/doc/现状.md
+++ b/doc/现状.md
@@ -41,11 +41,14 @@
 
 ```txt
 confusefulliest/
+├── main.py
 ├── core/                # 解析调用
-│   └── parser.py
-├── visual/              # 可视化生成
+│   └── keyWords/
+|       ├── keyWords.json
+│       └── kw.cmd
+│   └── parserSwitch.py
 │   └── drawio_generator.py
-├── ts-parser/           # TypeScript解析器
+├── ts-js.parser/           # TypeScript解析器
 │   ├── index.ts
 │   └── test/
 └── doc/                 # 文档 & 废纸篓（迫真）
@@ -56,19 +59,12 @@ confusefulliest/
 
 ## 近期更新
 
--   修复了背景颜色获取问题
--   优化了容器尺寸计算算法
--   完善了元素排序逻辑
--   TS 解析器新增功能：
-    -   支持复杂类型(联合/交叉/条件类型)
-    -   添加泛型函数标记
-    -   实现命名空间解析
+-   推倒重来 10%
 
 ## 待办事项
 
--   [ ] 增加更多测试用例
--   [ ] 优化性能指标
--   [ ] 完善错误处理机制
+-   学习 ts
+-   重构 AST 解析器
 
 ## 运行方式
 
@@ -77,5 +73,5 @@ confusefulliest/
 python main.py <tarfile> [-o <output>]
 ```
 
-最后更新: 2025/7/15 18:40  
+最后更新: 2025/7/19 22:47  
 经费：5RMB
